crates/tsuno-driver/tests/fixtures/snapshots/pass/verifies_checked_integer_arithmetic.snap
---
source: crates/tsuno-driver/tests/verify_cli.rs
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS arithmetic
  all assertions discharged

stderr:
