crates/tsuno-driver/tests/fixtures/snapshots/pass/verifies_generic_replace_via_move.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS replace
  all assertions discharged
PASS caller_i32
  all assertions discharged
PASS caller_pair
  all assertions discharged
PASS main
  all assertions discharged

stderr:
