crates/tsuno-driver/tests/fixtures/snapshots/pass/verifies_i32_entry_invariant.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS verifies_i32_entry_invariant
  all assertions discharged
PASS main
  all assertions discharged

stderr:
