crates/tsuno-driver/tests/fixtures/snapshots/pass/verifies_large_usize_constant.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS verifies_large_usize_constant
  all assertions discharged
PASS main
  all assertions discharged

stderr:
