crates/tsuno-driver/tests/fixtures/snapshots/pass/verifies_loop_invariant_after_header_comment.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS loop_ok
  all assertions discharged
PASS main
  all assertions discharged

stderr:
