crates/tsuno-driver/tests/fixtures/snapshots/pass/verifies_nested_loop_contracts.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS nested_loops
  all assertions discharged
PASS main
  all assertions discharged

stderr:
