crates/tsuno-driver/tests/fixtures/snapshots/pass/verifies_passing_known_i32_to_local_fn.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS caller
  all assertions discharged
PASS sink
  all assertions discharged
PASS main
  all assertions discharged

stderr:
