crates/tsuno-driver/tests/fixtures/snapshots/pass/verifies_prophecy_everywhere.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS mut_ref_model_everywhere
  all assertions discharged

stderr:
