crates/tsuno-driver/tests/fixtures/snapshots/pass/verifies_shadowed_binding_contracts.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 93
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS shadowed_binding_contracts
  all assertions discharged

stderr:
