crates/tsuno-driver/tests/fixtures/snapshots/pass/verifies_spec_vars_across_function_directives.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS verifies_spec_vars_across_function_directives
  all assertions discharged

stderr:
